Fixed education section spacing

--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,7 @@
   justify-content: space-evenly;
   margin-top: 1em;
   margin-bottom: 1em;
+  width: 100vw;
 }
 
 #header {
